# finbricklab

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  FX_TRANSFER_PR_ROADMAP.md  LICENSE  Makefile  NOTICE  PR_READY_CHECKLIST.md  README.md  followups.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  pages-strict-check.yml  pages.yml  release.yml
docs/: .pages  API_REFERENCE.md  BRICK_CATALOG_YAML.md  CONTRIBUTING.md  ENTITY_AND_CANONICAL_SCHEMA.md  EXAMPLES.md  POSTINGS_MODEL_AND_BRICK_TYPES.md  STRATEGIES.md  STRUCTS.md  TECHNICAL_SPEC_POSTINGS_MODEL.md  V2_QUESTIONS.md  gen_ref_nav.py  index.md
docs/guides/: V2_GUIDE.md  finbricklab_cursor_summary_guidelines.md
docs/reference/: .pages  index.md
docs/reference/finbricklab/: charts.md  cli.md  fx.md  kpi.md
docs/reference/finbricklab/core/: bricks.md  context.md  entity.md  errors.md  events.md  interfaces.md  kinds.md  links.md  macrobrick.md  registry.md  results.md  scenario.md  specs.md  utils.md  validation.md
docs/reference/finbricklab/strategies/: registry.md
docs/reference/finbricklab/strategies/flow/: expense.md  income.md  transfer.md
docs/reference/finbricklab/strategies/schedule/: mortgage_annuity.md
docs/reference/finbricklab/strategies/valuation/: cash.md  etf_unitized.md  property_discrete.md
docs/release/: PR16_DESCRIPTION.md
examples/: canonical_journal_example.py  entity_comparison_example.py  filtered_results_example.py  journal_analysis_example.py  new_strategies_example.py  summary_helpers_example.py  user_friendly_etf_api.py
examples/catalogs/: starter.yaml
examples/legacy-poc/: README.md
examples/legacy-poc/examples/: 01_activation_windows_demo.py  02_mortgage_balloon_prepay.py  03_etf_buy_sell_sdca.py  enhanced_output_demo.py  etf_buy_sell_sdca_demo.py  fees_financing_demo.py  house_plus_etf_demo.py  mortgage_balloon_prepay_demo.py  period_index_demo.py  quickstart.py
examples/legacy-poc/notebooks/: 01_quickstart.ipynb
examples/notebooks/: first_test.ipynb
finscenlab-poc/examples/: delayed_activation.py  equity_neutral_windowing_demo.py  etf_features_demo.py  income_escalator_demo.py  liquidity_test.py  mortgage_refactoring_demo.py  scenario_validate_demo.py  standard_api_demo.py  test_delayed.py  validation_checks_demo.py
finscenlab-poc/finscenlab/: __init__.py  core.py  kinds.py  strategies.py
scripts/: check_forbidden_tokens.py  run_pytest_for_branch.py
src/finbricklab/: __init__.py  charts.py  cli.py  fx.py  kpi.py
src/finbricklab/core/: __init__.py  accounts.py  bricks.py  catalog_loader.py  clone.py  compiler.py  context.py  currency.py  entity.py  errors.py  events.py  exceptions.py  interfaces.py  journal.py  kinds.py  links.py  macrobrick.py  registry.py  results.py  scenario.py  specs.py  transfer_visibility.py  utils.py  validation.py
src/finbricklab/strategies/: __init__.py  registry.py
src/finbricklab/strategies/flow/: __init__.py  expense.py  expense_onetime.py  expense_recurring.py  income.py  income_onetime.py  income_recurring.py  transfer.py
src/finbricklab/strategies/schedule/: __init__.py  _loan_utils.py  credit_fixed.py  credit_line.py  loan_annuity.py  loan_balloon.py  mortgage_annuity.py
src/finbricklab/strategies/transfer/: __init__.py  _validation.py  lumpsum.py  recurring.py  scheduled.py
src/finbricklab/strategies/valuation/: __init__.py  cash.py  etf_unitized.py  private_equity.py  property.py  property_discrete.py  security_unitized.py
src/finscenlab/: __init__.py
tests/: __init__.py  test_entity_breakeven_golden.py  test_entity_builder.py  test_entity_charts.py  test_entity_run_scenario.py  test_etf_user_friendly_api.py  test_fx_utilities.py  test_kinds_registry_alignment.py  test_kpi_utilities.py  test_macrobrick_expansion.py  test_macrobrick_finbrick_charts.py  test_smoke_imports.py  test_smoke_scenario.py  test_strategy_registry_comprehensive.py
tests/core/: test_activation_windows.py  test_canonical_mapping.py  test_cash_routing.py  test_cash_routing_journal.py  test_catalog_loader.py  test_currency_quantize.py  test_filtered_results.py  test_journal_balance_snapshot.py  test_journal_invariants.py  test_journal_routing.py  test_journal_routing_paths.py  test_journal_v2_invariants.py  test_journal_v2_smoke.py  test_journal_zero_sum_meta.py  test_kinds_registry_alignment.py  test_macrobrick_aggregation.py  test_macrobricks.py  test_multi_cash_routing.py  test_property_hypothesis.py  test_results_filtering.py  test_scenario_basics.py  test_summaries.py  test_tbrick_journal.py  test_transfer_journal.py
tests/data/: golden_12m.csv
tests/data/catalogs/: base.yaml
tests/integration/: test_cash_account_regressions.py  test_entity_basic.py  test_entity_breakeven_golden.py  test_entity_builder.py  test_smoke_imports.py  test_strategy_registry_comprehensive.py
tests/strategies/: test_cash_account.py  test_etf_unitized.py  test_mortgage_annuity.py  test_mortgage_de_aliasing.py  test_mortgage_german_scenarios.py  test_new_strategies_comprehensive.py  test_property_parameter_normalization.py
tests/strategies/flow/: test_expense_recurring.py
tests/strategies/schedule/: test_loan_annuity.py  test_loan_balloon.py  test_loan_german_scenarios.py
tests/strategies/transfer/: test_lumpsum_transfers.py  test_scheduled_transfers.py
tests/strategies/valuation/: test_cash_account.py  test_etf_user_friendly_api.py  test_security_unitized.py
tests/unit/: test_chart_enhancements.py
