[tool.poetry]
name = "finbricklab"
version = "0.1.0"
description = "Strategy-Driven Brick Architecture for Financial Scenarios"
authors = ["FinBrickLab Team"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/your-org/finbricklab"
repository = "https://github.com/your-org/finbricklab"
documentation = "https://github.com/your-org/finbricklab#readme"
keywords = ["finance", "modeling", "scenario", "simulation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.0"
pandas = "^2.0.0"
plotly = {version = "^5.24.0", optional = true}
kaleido = {version = "^0.2.1", optional = true}

[tool.poetry.extras]
viz = ["plotly", "kaleido"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.0.0"
ruff = "^0.1.0"
mypy = "^1.5.0"
pre-commit = "^3.4.0"

[tool.poetry.scripts]
finbrick = "finbricklab.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# [[tool.poetry.packages]]
# include = "finbricklab"
# from = "src"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Allow untyped functions for now
disallow_incomplete_defs = false  # Allow incomplete type annotations
check_untyped_defs = true
disallow_untyped_decorators = false  # Allow untyped decorators
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = false  # Don't warn about missing returns
warn_unreachable = false  # Don't warn about unreachable code
strict_equality = true
disable_error_code = [
    "no-any-return",  # Allow returning Any in some cases
    "union-attr",     # Allow accessing attributes on Union types
    "var-annotated",  # Allow unannotated variables
    "no-redef",       # Allow redefinitions in some cases
    "literal-required", # Allow non-literal keys in TypedDict
    "typeddict-item", # Allow missing/extra TypedDict keys
    "typeddict-unknown-key", # Allow unknown TypedDict keys
    "arg-type",       # Allow some argument type mismatches
    "assignment",     # Allow some assignment type mismatches
    "attr-defined",   # Allow accessing potentially undefined attributes
    "unused-ignore",  # Allow unused type: ignore comments
    "list-item",      # Allow list item type mismatches
    "valid-type",     # Allow some type validation issues
]

[[tool.mypy.overrides]]
module = [
    "numpy.*",
    "pandas.*",
    "matplotlib.*",
    "plotly.*",
    "kaleido.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "tests.*",
]
disallow_untyped_defs = false
disallow_incomplete_defs = false
warn_no_return = false
warn_unreachable = false

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
